Changes html, css

--- a/index.html
+++ b/index.html
@@ -24,12 +24,24 @@
             <img class="logo" src="img/apple-logo.svg" alt="Apple logo">
          </a>
          <ul class="site-header-navbar">
-            <li class="site-header-navbar-item"><a class="site-header-navbar-item-link" href="#">Home</a></li>
-            <li class="site-header-navbar-item"><a class="site-header-navbar-item-link" href="#">About</a></li>
-            <li class="site-header-navbar-item"><a class="site-header-navbar-item-link" href="#">Offers</a></li>
-            <li class="site-header-navbar-item"><a class="site-header-navbar-item-link" href="#">Services</a></li>
+            <li class="site-header-navbar-item">
+                <a class="site-header-navbar-item-link" href="#">Home</a>
+            </li>
+            <li class="site-header-navbar-item">
+                <a class="site-header-navbar-item-link" href="#">About</a>
+            </li>
+            <li class="site-header-navbar-item">
+                <a class="site-header-navbar-item-link" href="#">Offers</a>
+            </li>
+            <li class="site-header-navbar-item">
+                <a class="site-header-navbar-item-link" href="#">Services</a>
+            </li>
          </ul>
-         <strong class="site-header-search"><a class="site-header-search-link" href="#">How we can help you?</a></strong>
+
+         <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
+            <input class="search-form-input" type="search" name="search" placeholder="How we can help you?" aria-label="Search" required>
+         </form>
+         <!-- <strong class="site-header-search"><a class="site-header-search-link" href="#">How we can help you?</a></strong> -->
      </div>
 </header>
 
